[workspace]
members = [
    "hv-core",
    "hv-egui",
    "hv-fmod-sys",
    "hv-fmod",
    "hv-friends",
    "hv-looprider",
    "hv-mymachine",
    "hv-rain",
    "hv-talisman",
    "hv-tiled",
]

[profile.dev]
codegen-units = 1

[profile.release]
codegen-units = 1

[patch.crates-io]
tiled = { path = "./rs-tiled" }
