[workspace]
members = [
    "examples/smb1-1",
    "hv-core",
    "hv-egui",
    "hv-fmod-sys",
    "hv-fmod",
    "hv-friends",
    "hv-looprider",
    "hv-mymachine",
    "hv-rain",
    "hv-talisman",
    "hv-tiled",
]

[profile.dev]
opt-level = 1
codegen-units = 1

[profile.release]
codegen-units = 1

[patch.crates-io]
thunderdome = { git = "https://github.com/sdleffler/thunderdome" }
