[package]
name = "belltower"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hv-core = { path = "../hv-core" }
hv-friends = { path = "../hv-friends" }
hv-fmod = { path = "../hv-fmod" }
nalgebra = "0.29.0"
anyhow = "1.0.42"
simple_logger = "1.12.1"
mlua = "0.6.2"
ctor = "0.1.20"
log = "0.4.14"
nalgebra-glm = "0.14.0"
hecs = { version = "0.6.0", features = ["column-serialize"] }
thunderdome = "0.4.1"
serde = "1.0.127"
hv-mymachine = { path = "../hv-mymachine" }
hv-egui = { path = "../hv-egui" }
erased-serde = "0.3.16"
serde_json = "1.0.66"
hv-talisman = { path = "../hv-talisman" }
