[package]
name = "hv-core"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mlua = { version = "0.6.2", features = ["luajit", "vendored", "serialize", "send", "macros"] }
hecs = "0.6.1"
static_assertions = "1.1.0"
inventory = "0.1.10"
hibitset = { version = "0.6.3", default-features = false }
thunderdome = "0.4.1"
thiserror = "1.0.26"
anyhow = "1.0.42"
miniquad = { version = "0.3.0-alpha.37", default-features = false }
serde = { version = "1.0.126", features = ["derive"] }
shrev = "1.1.1"
zip = "0.5.13"
directories = "3.0.2"
log = "0.4.14"
nalgebra = "0.29.0"
arc-swap = "1.3.0"
const_format = "0.2.17"
smallbox = "0.8.0"

[build-dependencies]
walkdir = "2.3.2"
zip = "0.5.13"
