[package]
name = "hv-egui"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = { version = "0.14" }
hv-core = { path = "../hv-core" }
hv-friends = { path = "../hv-friends" }
mlua = "0.6.2"
quad-url = "0.1.1"
