[package]
name = "hv-fmod"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hv-fmod-sys = { path = "../hv-fmod-sys" }
regex = "1.5.4"
lazy_static = "1.4.0"
hv-core = { path = "../hv-core" }
enum-primitive-derive = "0.2.1"
lib = "0.0.2"
num-traits = "0.2.14"
bitflags = "1.3.1"
serde = "1.0.127"
log = "0.4.14"
libc = "0.2.99"
mlua = "0.6.2"
thunderdome = "0.4.1"
hibitset = "0.6.3"
