[package]
name = "hv-friends"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hv-core = { path = "../hv-core" }
nalgebra = { version = "0.29.0", features = ["convert-mint", "serde-serialize"] }
ncollide2d = { version = "0.32.0", features = ["serde-serialize"] }
mlua = { version = "0.6.2", features = ["luajit", "vendored", "serialize", "send", "macros"] }
lyon = "0.17.5"
thunderdome = "0.4.1"
serde = { version = "1.0.127", features = ["derive"] }
mint = "0.5.6"
num-traits = "0.2.14"
image = "0.23.14"
nalgebra-glm = "0.14.0"
hibitset = "0.6.3"
aseprite = "0.1.3"
serde_json = "1.0.66"
crevice = "0.7.1"
log = "0.4.14"
rusttype = "0.9.2"
ordered-float = "2.7.0"
smallbox = { version = "0.8.0", features = ["coerce"] }

[build-dependencies]
walkdir = "2.3.2"
zip = "0.5.13"

[dev-dependencies]
simple_logger = "1.13.0"
