[package]
name = "hv-talisman"
version = "0.1.0"
authors = ["Shea Decibel Leffler <shea@errno.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

[dependencies]
hv-core = { path = "../hv-core" }
hv-friends = { path = "../hv-friends" }
hv-egui = { path = "../hv-egui" }
hv-mymachine = { path = "../hv-mymachine" }
thunderdome = "0.4.1"
serde = "1.0.128"
log = "0.4.14"
erased-serde = "0.3.16"
mlua = "0.6.2"
ctor = "0.1.20"
serde_json = "1.0.66"
bincode = "1.3.3"
bidiff = "1.0.0"
bipatch = "1.0.0"
send_wrapper = "0.5.0"
fuzzy-matcher = "0.3.7"

[build-dependencies]
walkdir = "2.3.2"
zip = "0.5.13"
