[package]
name = "hv-tiled"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tiled = "0.9.5"
hv-core = { path = "../hv-core" }
hv-friends = { path = "../hv-friends" }

[dev-dependencies]
simple_logger = "1.13.0"
